--- a/src/pages/mini_player/miniPlayer.fxml
+++ b/src/pages/mini_player/miniPlayer.fxml
@@ -42,54 +42,73 @@
 
         <!-- === Main UI (shown when hovered) === -->
         <StackPane fx:id="uiContainer" alignment="CENTER">
-            <VBox alignment="CENTER" spacing="18">
-                <Label text="🎵" styleClass="mini-player-icon-label" />
-
-                <Label fx:id="songLabel"
-                       text="Now Playing"
-                       styleClass="mini-player-song-label" />
-
-                <HBox alignment="CENTER" spacing="20">
-                    <Button fx:id="prevButton"
-                            onAction="#previous"
-                            styleClass="mini-player-control-button">
-                        <graphic>
-                            <FontIcon iconLiteral="fas-backward" />
-                        </graphic>
-                    </Button>
-
-                    <Button fx:id="playPauseButton"
-                            onAction="#playPause"
-                            styleClass="mini-player-play-button">
-                        <graphic>
-                            <FontIcon fx:id="playPauseIcon" iconLiteral="fas-play" />
-                        </graphic>
-                    </Button>
-
-                    <Button fx:id="nextButton"
-                            onAction="#next"
-                            styleClass="mini-player-control-button">
-                        <graphic>
-                            <FontIcon iconLiteral="fas-forward" />
-                        </graphic>
-                    </Button>
-                </HBox>
-
-                <!-- Ambient control row placed under main controls -->
-                <HBox alignment="CENTER" spacing="8">
-                    <children>
-                        <Button fx:id="ambientButton" mnemonicParsing="false" onAction="#handleAmbientMini" styleClass="mini-player-control-button">
+            <BorderPane>
+                <top>
+                    <Label fx:id="songLabel"
+                           text="Now Playing"
+                           styleClass="mini-player-song-label"
+                           wrapText="true"
+                           textAlignment="CENTER"
+                           maxWidth="200"
+                           BorderPane.alignment="CENTER">
+                        <BorderPane.margin>
+                            <Insets top="60"/>
+                        </BorderPane.margin>
+                    </Label>
+                </top>
+                <center>
+                    <HBox alignment="CENTER" spacing="20">
+                        <BorderPane.margin>
+                            <Insets top="40"/>
+                        </BorderPane.margin>
+                        <Button fx:id="prevButton"
+                                onAction="#previous"
+                                styleClass="mini-player-control-button">
                             <graphic>
-                                <FontIcon iconLiteral="fas-tree" />
+                                <FontIcon iconLiteral="fas-backward" />
                             </graphic>
                         </Button>
-                    </children>
-                </HBox>
 
-                <Button text="⤴ Restore"
-                        onAction="#restoreMain"
-                        styleClass="mini-player-restore-button" />
-            </VBox>
+                        <Button fx:id="playPauseButton"
+                                onAction="#playPause"
+                                styleClass="mini-player-play-button">
+                            <graphic>
+                                <FontIcon fx:id="playPauseIcon" iconLiteral="fas-play" />
+                            </graphic>
+                        </Button>
+
+                        <Button fx:id="nextButton"
+                                onAction="#next"
+                                styleClass="mini-player-control-button">
+                            <graphic>
+                                <FontIcon iconLiteral="fas-forward" />
+                            </graphic>
+                        </Button>
+                    </HBox>
+                </center>
+                <bottom>
+                    <VBox alignment="CENTER" spacing="10">
+                        <children>
+                            <HBox alignment="CENTER" spacing="8">
+                                <children>
+                                    <Button fx:id="ambientButton" mnemonicParsing="false" onAction="#handleAmbientMini" styleClass="mini-player-control-button">
+                                        <graphic>
+                                            <FontIcon iconLiteral="fas-tree" />
+                                        </graphic>
+                                    </Button>
+                                </children>
+                            </HBox>
+
+                            <Button text="⤴ Restore"
+                                    onAction="#restoreMain"
+                                    styleClass="mini-player-restore-button" />
+                        </children>
+                        <BorderPane.margin>
+                            <Insets bottom="30"/>
+                        </BorderPane.margin>
+                    </VBox>
+                </bottom>
+            </BorderPane>
         </StackPane>
     </children>
 </StackPane>
