--- a/src/pages/mini_player/miniPlayer.fxml
+++ b/src/pages/mini_player/miniPlayer.fxml
@@ -57,57 +57,53 @@
                     </Label>
                 </top>
                 <center>
-                    <HBox alignment="CENTER" spacing="20">
-                        <BorderPane.margin>
-                            <Insets top="40"/>
-                        </BorderPane.margin>
-                        <Button fx:id="prevButton"
-                                onAction="#previous"
-                                styleClass="mini-player-control-button">
-                            <graphic>
-                                <FontIcon iconLiteral="fas-backward" />
-                            </graphic>
-                        </Button>
-
-                        <Button fx:id="playPauseButton"
-                                onAction="#playPause"
-                                styleClass="mini-player-play-button">
-                            <graphic>
-                                <FontIcon fx:id="playPauseIcon" iconLiteral="fas-play" />
-                            </graphic>
-                        </Button>
-
-                        <Button fx:id="nextButton"
-                                onAction="#next"
-                                styleClass="mini-player-control-button">
-                            <graphic>
-                                <FontIcon iconLiteral="fas-forward" />
-                            </graphic>
-                        </Button>
-                    </HBox>
-                </center>
-                <bottom>
-                    <VBox alignment="CENTER" spacing="10">
+                    <GridPane alignment="CENTER" hgap="10" vgap="10">
+                        <padding>
+                            <Insets top="20" bottom="20"/>
+                        </padding>
                         <children>
-                            <HBox alignment="CENTER" spacing="8">
-                                <children>
-                                    <Button fx:id="ambientButton" mnemonicParsing="false" onAction="#handleAmbientMini" styleClass="mini-player-control-button">
-                                        <graphic>
-                                            <FontIcon iconLiteral="fas-tree" />
-                                        </graphic>
-                                    </Button>
-                                </children>
-                            </HBox>
+                            <Button onAction="#restoreMain" styleClass="mini-player-control-button" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-level-up-alt" />
+                                </graphic>
+                            </Button>
 
-                            <Button text="⤴ Restore"
-                                    onAction="#restoreMain"
-                                    styleClass="mini-player-restore-button" />
+                            <Button fx:id="prevButton" onAction="#previous" styleClass="mini-player-control-button" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-backward" />
+                                </graphic>
+                            </Button>
+
+                            <Button fx:id="playPauseButton" onAction="#playPause" styleClass="mini-player-play-button" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                <graphic>
+                                    <FontIcon fx:id="playPauseIcon" iconLiteral="fas-play" />
+                                </graphic>
+                            </Button>
+
+                            <Button fx:id="nextButton" onAction="#next" styleClass="mini-player-control-button" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-forward" />
+                                </graphic>
+                            </Button>
+
+                            <Button fx:id="ambientButton" mnemonicParsing="false" onAction="#handleAmbientMini" styleClass="mini-player-control-button" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                <graphic>
+                                    <FontIcon iconLiteral="fas-tree" />
+                                </graphic>
+                            </Button>
                         </children>
-                        <BorderPane.margin>
-                            <Insets bottom="30"/>
-                        </BorderPane.margin>
-                    </VBox>
-                </bottom>
+                        <columnConstraints>
+                            <ColumnConstraints halignment="CENTER" />
+                            <ColumnConstraints halignment="CENTER" />
+                            <ColumnConstraints halignment="CENTER" />
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints valignment="CENTER" />
+                            <RowConstraints valignment="CENTER" />
+                            <RowConstraints valignment="CENTER" />
+                        </rowConstraints>
+                    </GridPane>
+                </center>
             </BorderPane>
         </StackPane>
     </children>
