--- a/src/pages/playlists/playlists.fxml
+++ b/src/pages/playlists/playlists.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,6 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <AnchorPane fx:id="rootPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pages.playlists.PlaylistsPageController">
     <children>
@@ -72,7 +74,14 @@
         <HBox alignment="CENTER_LEFT" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="30.0" spacing="10.0">
             <children>
 
-                <Button onAction="#AddNewPlaylist" text="Add Playlist" styleClass="close-btn, add-playlist-btn" />
+                <Button mnemonicParsing="false" onAction="#AddNewPlaylist" styleClass="icon-btn, add-playlist-btn">
+                    <graphic>
+                        <FontIcon iconLiteral="fas-plus" iconSize="16" styleClass="iconli-font-icon"/>
+                    </graphic>
+                    <tooltip>
+                        <Tooltip text="Add playlist" />
+                    </tooltip>
+                </Button>
                 <HBox HBox.hgrow="ALWAYS" />
                 <Button onAction="#goToSongs" text="X" styleClass="close-btn" />
 
