--- a/src/css/home.css
+++ b/src/css/home.css
@@ -408,5 +408,5 @@
      -fx-background-color: transparent;
      -fx-text-fill: white;
      -fx-border-width: 2px;
-     -border-color: white;
+     -fx-border-color: white;
 }
